2007-08-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): fixed
	reference count of the display filter stack.

2007-08-08  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimppropwidgets.[ch]
	(gimp_prop_aspect_ratio_new)
	(gimp_prop_aspect_ratio_changed): Remove fixed_aspect_property.

	* app/tools/gimprectangleoptions.c (gimp_rectangle_options_gui):
	Changed accordingly.

2007-08-08  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleoptions.[ch]: Use separate
	desired-fixed-size-width/height properties for Fixed: Size instead
	of sharing properties with Fixed: Width/Height.

	* app/tools/gimprectangletool.c: Use the two new properties for
	Fixed: Size.

2007-08-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c: added entries for the right
	and bottom margins. Use the unit from the image size entry.

2007-08-07  Tor Lillqvist  <tml@novell.com>

	* modules/Makefile.am: Add libgimpcolor to cdisplay_libadd.

2007-08-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/png.c (save_image): in the absence of an
	embedded color profile, write the sRGB chunk.

2007-08-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimppalette-import.c
	* app/core/gimppalette-load.[ch]: applied slightly modified version
	of a patch from Nicola Archibald that adds support for importing
	Adobe Color palette version 1 files (bug #316618).

2007-08-07  Sven Neumann  <sven@gimp.org>

	* app/gui/gui-vtable.c (gui_pdb_dialog_new): as a workaround for
	bug #360106, set a timeout that presents the dialog window.

	* app/widgets/gimppdbdialog.c (gimp_pdb_dialog_set_property):
	formatting.

2007-08-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.c (gimp_image_get_icc_profile): return NULL
	if the parasite exists but it is empty.

2007-08-07  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgetstypes.h: removed leftover typedef
	for GimpResolutionEntry.
